# Toy-Cpp-Project-with-Kaitai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  calmsize.cpp  calmsize.h  cxxopts.hpp  generated.cpp  generated.h  ksy_helper.cpp  ksy_helper.h  main.cpp  reverse.h  test.txt  universal_iterator.cpp  universal_iterator.h  utils.cpp  utils.h
kaitai/: exceptions.h
ksy/: avi.cpp  avi.h  avi.ksy  generated.ksy  mkv.cpp  mkv.h  mkv.ksy  mp4.cpp  mp4.h  mp4.ksy  mp4_atom.cpp  mp4_atom.h  mp4_atom.ksy
